# rust_snn

./: Cargo.toml  LICENSE  README.md
brain/: Cargo.toml
brain/src/: lib.rs
constants/: Cargo.toml
constants/src/: lib.rs
main/: Cargo.toml
main/src/: .main.rs.swp  main.rs
mover/: Cargo.toml
mover/src/: lib.rs  xxx
src/: lib.rs  main.rs  snn.rs
