[package]
name = "rust_snn"
version = "0.1.0"
authors = ["Phillip Neal <phin1984@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "snnlib"
path = "src/lib.rs"

[[bin]]
name = "snn"
path = "src/snn.rs"

[dependencies]
rand = "0.8.3"
nannou = "0.16"

